# CLibs

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  array_printf.h  assert_that.h  attributes.h  dictionary.c  dictionary.h  dynarr.c  dynarr.h  dynstring.c  dynstring.h  errors.c  errors.h  extra_types.h  foreach.h  item_print_functions.c  item_print_functions.h  main.c  misc.c  misc.h  pointer_utils.c  pointer_utils.h  print_functions.c  print_functions.h  print_ln.c  print_ln.h  run_test.h  sets.c  sets.h  string_utils.c  string_utils.h  swexpr.c  swexpr.h  terminal_colors.h  unit_tests.h
.github/workflows/: c-tests.yml  ci.yml  cmake-tests.yml  doxygen.yml
Dev/: assert_that.h  attributes.h  errors.h  filenames.h  pointer_utils.h  terminal_colors.h  unit_tests.h
Structs/: big-num-calc.hs  bigint.c  bigint.h  dictionary.c  dictionary.h  dynarr.c  dynarr.h  dynstring.c  dynstring.h  sets.c  sets.h
Structs/Bigint/: numbers_list.c  numbers_list.h
Tests/: assert_that.h  bigint_test.c  test_dynstr.h  test_foreach.h  test_hash_func.c  test_leet.c  test_list.h  test_misc.c  test_misc_c.h  test_queue.c  test_replace.c  test_sets.c  test_string_escape.c  test_string_utils.c  test_string_utils.h  test_strsplit.c  test_strstrip.c  test_swex.h  test_unit_tests.c  test_upper_lower.c  tests.c
docs/: annotated.html  annotated_dup.js  array__printf_8h.js  array__printf_8h_source.html  assert__that_8h.html  assert__that_8h.js  assert__that_8h_source.html  attributes_8h.html  attributes_8h.js  attributes_8h_source.html  bug.html  classes.html  dictionary_8h.js  dictionary_8h_source.html  dir_634f23057dd15dc1a9eb9d9633ecc083.js  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d0381950fc41278198232cb047ffc1f9.html  dir_d0381950fc41278198232cb047ffc1f9.js  doxygen_crawl.html  dynarr.md  dynarr_8h.html  dynarr_8h.js  dynarr_8h_source.html  dynstr.md  dynstring_8h.html  dynstring_8h_source.html  errors_8h.html  errors_8h_source.html  extra__types_8h.html  extra__types_8h.js  extra__types_8h_source.html  filenames_8h.html  filenames_8h.js  filenames_8h_source.html  files.html  foreach_8h.html  foreach_8h.js  foreach_8h_source.html  functions.html  functions_vars.html  (+69 more)
docs/html/: _2_users_2mipit_2_programming_2_c_projects_2_c_libs_2src_2headers_2array_printf_8h-example.html  _2_users_2mipit_2_programming_2_c_projects_2_c_libs_2src_2headers_2assert_that_8h-example.html  _2_users_2mipit_2_programming_2_c_projects_2_c_libs_2src_2headers_2errors_8h-example.html  _2_users_2mipit_2_programming_2_c_projects_2_c_libs_2src_2headers_2filenames_8h-example.html  _2_users_2mipit_2_programming_2_c_projects_2_c_libs_2src_2headers_2foreach_8h-example.html  _2_users_2mipit_2_programming_2_c_projects_2_c_libs_2src_2math_8h-example.html  _2_users_2mipit_2_programming_2_c_projects_2_c_libs_2src_2string_utils_8h-example.html  _2_users_2mipit_2_programming_2_c_projects_2_c_libs_2src_2structs_2dynarr_8h-example.html  _2_users_2mipit_2_programming_2_c_projects_2_c_libs_2src_2structs_2dynstring_8h-example.html  array__printf_8h.html  attributes_8h.html  attributes_8h_source.html  dictionary_8c.html  dictionary_8c.js  dictionary_8h.html  dir_634f23057dd15dc1a9eb9d9633ecc083.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d0381950fc41278198232cb047ffc1f9.html  dynarr_8c.html  dynarr_8c.js  dynarr_8h_source.html  dynstring_8c.html  dynstring_8c.js  dynstring_8h.js  dynstring_8h_source.html  errors_8h.js  errors_8h_source.html  examples.html  examples.js  filenames_8h_source.html  files.html  globals.html  globals_a.html  globals_func.js  globals_func_a.html  globals_func_b.html  globals_func_d.html  globals_func_f.html  globals_func_g.html  globals_func_h.html  (+56 more)
docs/html/search/: all_11.js  all_6.js  all_a.js  classes_2.js  classes_3.js  classes_5.js  defines_10.js  defines_3.js  functions_9.js  functions_b.js  functions_c.js  pages_2.js  pages_3.js  pages_5.js  pages_6.js  variables_6.js  variables_7.js  variables_8.js  variables_a.js  variables_b.js  variables_d.js  variables_e.js  variables_f.js
docs/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_14.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_11.js  defines_12.js  defines_2.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_d.js  defines_e.js  defines_f.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  (+33 more)
src/: array_printf.h  clibs.h  foreach.h  headers.h  item_print_functions.c  item_print_functions.h  math.h  misc.c  misc.h  string_utils.c  string_utils.h  structs.h  swexpr.c  swexpr.h  util.h
src/Dev/: assert_that.h  attributes.h  errors.h  extra_types.h  foreach.h  swexpr.h  unit_tests.h
src/Structs/: big-num-calc.hs  dictionary.c  dictionary.h  dynarr.c  dynarr.h  dynstring.c  dynstring.h  queue.c  queue.h  sets.c  sets.h
src/headers/: array_printf.h  assert_that.h  attributes.h  cmp.h  core.h  errors.h  extra_types.h  filenames.h  foreach.h  misc.h  pointer_utils.h  print.h  simple_math.h  static_assert.h  swexpr.h  terminal_colors.h  types.h  unit_tests.h  unreachable.h  util.h
src/structs/: conversions.c  conversions.h  dictionary.c  dictionary.h  dynarr.c  dynarr.h  dynstring.c  dynstring.h  queue.c  queue.h  set.c  set.h  sets.c
src/util/: item_print_functions.c  item_print_functions.h  math.c  math.h  string_utils.c  string_utils.h
testing/: test_dynstr.h  test_hash_func.c  test_leet.c  test_sets.c
tests/: test_assert_that.c  test_dict.c  test_dynstr.h  test_foreach.h  test_hash_func.c  test_leet.c  test_misc_c.h  test_printing.c  test_queue.c  test_string_utils.h  test_unit_tests.c  tests.c
tests/modules/: test_array_sprintf.h  test_arrayprintf.h  test_cmp.h  test_dict.h  test_dynstr.h  test_filenames.h  test_foreach.h  test_list.h  test_math.h  test_misc_c.h  test_queue.h  test_sets.h  test_string_utils.h  test_struct_conversions.h  test_swex.h  test_to_string.h
(+26 files in other folders)
